--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ HOST="localhost"
 DB_PASSWORD="duyhung@2004"
 DB_USER="dhung"
 URL_REDIS="localhost:6379"
-DB_NAME="h-shop-product-write"
+DB_NAME="h-shop-product"
 APP_NAME="h-shop"
 MONGO_DB_LOCAL="mongodb://192.168.127.102:27017"
