--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ DB_USER="dhung"
 URL_REDIS="localhost:6379"
 DB_NAME="h-shop-product"
 APP_NAME="h-shop"
-MONGO_DB_LOCAL="mongodb://192.168.127.102:27017"
+MONGO_DB_LOCAL="mongodb+srv://nguyenduyhung04092004:QKMKoYzs3cQa3UsW@h-shop.txsafcd.mongodb.net/?retryWrites=true&w=majority&appName=h-shop"
