--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_PORT=18883
 DB_HOST="h-shop.nld1h8l.mongodb.net"
 HOST="localhost"
-DB_PASSWORD="duyhung@2004"
+DB_PASSWORD="QKMKoYzs3cQa3UsW"
 DB_USER="dhung"
 URL_REDIS="localhost:6379"
 DB_NAME="h-shop-product"
