--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 APP_PORT=18883
 DB_HOST="h-shop.nld1h8l.mongodb.net"
 HOST="localhost"
-DB_PASSWORD="QKMKoYzs3cQa3UsW"
-DB_USER="dhung"
+DB_PASSWORD="SIi75iWCRnSwjLrP"
+DB_USER="ndhung0409"
 URL_REDIS="localhost:6379"
 DB_NAME="h-shop-product"
 APP_NAME="h-shop"
-MONGO_DB_LOCAL="mongodb://192.168.127.102:27017"
+MONGO_DB_LOCAL="mongodb+srv://ndhung0409:SIi75iWCRnSwjLrP@h-shop.uleepjy.mongodb.net/?retryWrites=true&w=majority&appName=h-shop"
 
-# MONGO_DB_LOCAL="mongodb+srv://nguyenduyhung04092004:QKMKoYzs3cQa3UsW@h-shop.txsafcd.mongodb.net/?retryWrites=true&w=majority&appName=h-shop"
+# MONGO_DB_LOCAL="mongodb+srv://ndhung0409:SIi75iWCRnSwjLrP@h-shop.uleepjy.mongodb.net/?retryWrites=true&w=majority&appName=h-shop"
 # MONGO_DB_LOCAL="mongodb://192.168.127.102:27017"
