--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ DB_USER="ndhung0409"
 URL_REDIS="localhost:6379"
 DB_NAME="h-shop-product"
 APP_NAME="h-shop"
-MONGO_DB_LOCAL="mongodb+srv://ndhung0409:SIi75iWCRnSwjLrP@h-shop.uleepjy.mongodb.net/?retryWrites=true&w=majority&appName=h-shop"
+MONGO_DB_LOCAL="mongodb://192.168.127.102:27017"
 
 # MONGO_DB_LOCAL="mongodb+srv://ndhung0409:SIi75iWCRnSwjLrP@h-shop.uleepjy.mongodb.net/?retryWrites=true&w=majority&appName=h-shop"
 # MONGO_DB_LOCAL="mongodb://192.168.127.102:27017"
