--- a/.env
+++ b/.env
@@ -8,6 +8,8 @@ DB_NAME="h-shop-product"
 APP_NAME="h-shop"
 MONGO_DB_LOCAL="mongodb://localhost:27017"
 URL_RABBIT_MQ="amqp://guest:guest@localhost:5672/"
+ELASTIC_USER=elastic
+ELASTIC_PASSWORD='Sj-gYGQa**Bq-RBtnGav'
 
 # MONGO_DB_LOCAL="mongodb+srv://ndhung0409:SIi75iWCRnSwjLrP@h-shop.uleepjy.mongodb.net/?retryWrites=true&w=majority&appName=h-shop"
 # MONGO_DB_LOCAL="mongodb://192.168.62.102:27017"
